# Plotly-Dashboards-with-Dash

./: pyproject.toml
1-02E-ScatterplotExercises/: Ex1-Scatterplot.py  my_solution1.html
1-03E-LineChartExercises/: Ex2-Linechart.py  my_solution.html
