[tool.poetry]
name = "plotly-dashboards-with-dash"
version = "0.1.0"
description = "Fork from Pierian Data Plotly Dashboards with Dash course"
authors = ["Luca Talevi <talevi.luca@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
chardet = "^4.0.0"
click = "^7.1.2"
Cython = "^0.29.23"
dash = "^1.20.0"
dash-core-components = "^1.16.0"
decorator = "^5.0.7"
numpy = "^1.20.2"
pandas = "^1.2.4"
pandas-datareader = "^0.9.0"
python-dateutil = "^2.8.1"
pytz = "^2021.1"
requests = "^2.25.1"
urllib3 = "^1.26.4"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
